# SPDX-FileCopyrightText: 2023 perillamint
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch569-pac = { path = "../ch569-pac", features = ["critical-section"] }
